Archive2/99/4d0f2fd4e0733b/output
main.cpp:32:10: error: member reference base type 'int' is not a structure or union
        x.size(); // COMPILER ERROR on Clang, but ok on GCC
        ~^~~~~
main.cpp:43:5: note: in instantiation of function template specialization 'check<int>' requested here
    check(1);
    ^
1 error generated.
